bluec-tests/tests/invalid/typedef/out_of_scope.c
int main(void) {
    {
        typedef int AA;
    }
    {
        AA aa;
    }
    return 0;
}